; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_inference.c_minOR.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_inference.c_minOR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @minOR(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = call i32 @Z_UL(i32 1)
  %12 = shl i32 %11, 31
  store i32 %12, i32* %9, align 4
  br label %13

13:                                               ; preds = %59, %4
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %62

16:                                               ; preds = %13
  %17 = load i32, i32* %5, align 4
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %7, align 4
  %20 = and i32 %18, %19
  %21 = load i32, i32* %9, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %37

24:                                               ; preds = %16
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %9, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* %9, align 4
  %29 = sub nsw i32 0, %28
  %30 = and i32 %27, %29
  store i32 %30, i32* %10, align 4
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %6, align 4
  %33 = icmp sle i32 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %24
  %35 = load i32, i32* %10, align 4
  store i32 %35, i32* %5, align 4
  br label %62

36:                                               ; preds = %24
  br label %59

37:                                               ; preds = %16
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %7, align 4
  %40 = xor i32 %39, -1
  %41 = and i32 %38, %40
  %42 = load i32, i32* %9, align 4
  %43 = and i32 %41, %42
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %58

45:                                               ; preds = %37
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %9, align 4
  %48 = or i32 %46, %47
  %49 = load i32, i32* %9, align 4
  %50 = sub nsw i32 0, %49
  %51 = and i32 %48, %50
  store i32 %51, i32* %10, align 4
  %52 = load i32, i32* %10, align 4
  %53 = load i32, i32* %8, align 4
  %54 = icmp sle i32 %52, %53
  br i1 %54, label %55, label %57

55:                                               ; preds = %45
  %56 = load i32, i32* %10, align 4
  store i32 %56, i32* %7, align 4
  br label %62

57:                                               ; preds = %45
  br label %58

58:                                               ; preds = %57, %37
  br label %59

59:                                               ; preds = %58, %36
  %60 = load i32, i32* %9, align 4
  %61 = ashr i32 %60, 1
  store i32 %61, i32* %9, align 4
  br label %13

62:                                               ; preds = %55, %34, %13
  %63 = load i32, i32* %5, align 4
  %64 = load i32, i32* %7, align 4
  %65 = or i32 %63, %64
  ret i32 %65
}

declare dso_local i32 @Z_UL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
